# NoxCrypt

./: .gitignore  README.md  meson.build
src/: main.cpp  unpackerOptions.cpp  unpackerOptions.h
subprojects/NoxCryptKeys/: meson.build
subprojects/NoxCryptKeys/include/NoxCryptKeys/: keys.h
subprojects/NoxCryptKeys/src/: keys.cpp  keysData.cpp  keysData.h
